@@ -27,6 +27,9 @@ MailScanner
 MailWatch
   Verify version shows on login screen
   Verify that release link image appears
+  HIDE_UNKNOWN option works for reports and is enabled
+  HIDE_UNKNOWN option is added to config during upgrade
+  Successful login using full email address when LDAP mail field is in use
 clamav-unofficial-sigs
     Test signature operations
     Verify creation of cron, log, logrotate
